# RodoApp

./: Cargo.toml  README.md  build.rs  todos_export.json
.cargo/: config.toml
assets/fonts/: .gitkeep
scripts/: android_build.sh  build_run.bat  download_fonts.ps1  download_fonts.sh  rebuild.cmd  rebuild.ps1  rodo.ps1  run.ps1  windows_build.ps1
src/: app.rs  lib.rs  main.rs  markdown.rs  theme.rs  todo.rs  ui.rs
